# ifcpeek

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  pytest.ini
src/ifcpeek/: __init__.py  __main__.py  completion.py  completion_cache.py  config.py  debug.py  dynamic_completion.py  exceptions.py  formatters.py  shell.py  value_extraction.py
tests/: conftest.py  run_tests.py  test_completion.py  test_completion_cache.py  test_completion_regressions.py  test_config.py  test_context_resolver.py  test_dynamic_completion.py  test_error_handling.py  test_exceptions.py  test_formatters.py  test_formatting.py  test_history.py  test_history_integration.py  test_integration.py  test_integration_commands.py  test_integration_error.py  test_integration_fixes.py  test_main.py  test_main_imports.py  test_non_interactive.py  test_package_structure.py  test_query.py  test_query_execution.py  test_query_routing.py  test_shell.py  test_shell_commands.py  test_stdout.py  test_stdout_stderr.py  test_utils.py  test_value_extract.py  test_value_extraction.py
